--- a/www/index.html
+++ b/www/index.html
@@ -10,17 +10,21 @@
             * https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
             * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
                 * Enable inline JS: add 'unsafe-inline' to default-src
+
+                Obs: Liberei tanto default-src quanto media-src para tudo. Isso não é legal quanto a segurança
         -->
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">
+        <meta http-equiv="Content-Security-Policy" content="default-src * data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src * 'unsafe-inline'; media-src *;">
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <title>Geobus</title>
+         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDlargjGVVYY4jmXzABWiybi6Afu6E0Xfw"></script>
     </head>
     <body>
         <div class="app">
-            <h1 style="text-align: center;font-size: 3em;">Geobus</h1>
+            <h1>Geobus</h1>
+            <div id="map"></div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
