--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,6 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <title>Geobus</title>
-         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDlargjGVVYY4jmXzABWiybi6Afu6E0Xfw"></script>
     </head>
     <body>
         <div class="app">
@@ -28,5 +27,6 @@
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDlargjGVVYY4jmXzABWiybi6Afu6E0Xfw&libraries=geometry"></script>
     </body>
 </html>
