--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,7 @@
         <div class="app">
             <h1>Geobus</h1>
             <div id="map"></div>
+            <p id="heading"></p>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
